# rsc

./: .cproject  .project  CMakeLists.txt  Doxyfile.in  HACKING  INSTALL  RSC-CMakeConfig.cmake.in  RSCBuildTreeSettings.cmake.in  RSCConfig.cmake.in  RSCConfigVersion.cmake.in  qiproject.xml  release.sh  rsc.pc.in
cmake/: CMakeDoxyfile.in  CMakeLists.txt  CheckInitMethod.cmake  CheckLSBTypes.cmake  EnableCoverageReport.cmake  ExtractTBBVersion.cpp.in  FindBoostUUID.cmake  (+13 more)
cmake/Modules/: CMakeDoxyfile.in  CMakeLists.txt  CMakeVariableDump.cmake  CheckInitMethod.cmake  CheckLSBTypes.cmake  CurrentDate.cmake  DefineProjectVersion.cmake  EnableCoverageReport.cmake  EnableSlocCount.cmake  ExtractTBBVersion.cpp.in  FindBoostThreadpool.cmake  FindBoostUUID.cmake  FindCBF.cmake  FindCppcheck.cmake  FindEigen2.cmake  FindEigen3.cmake  FindFRI.cmake  FindJsonCpp.cmake  FindLcov.cmake  FindLog4cxx.cmake  FindMongo.cmake  FindOpenKC.cmake  FindProtocolBuffers.cmake  FindQGLViewer.cmake  FindSCC.cmake  FindSpread.cmake  FindTBB.cmake  FindXenomai.cmake  Findgcovr.cmake  Findsloccount.cmake  GenerateCppcheck.cmake  GenerateDoxygen.cmake  GitProjectVersion.cmake  IgnoreReturnCode.cmake  InstallDebugSymbols.cmake  InstallFilesRecursive.cmake  PadString.cmake  PedanticCompilerWarnings.cmake  ProvideGoogleMock.cmake  SubversionIsWc.cmake  (+4 more)
cmake/Toolchains/: CMakeLists.txt  Oncilla_RB110.cmake
examples/: CMakeLists.txt  ContainerIO.cpp  Directories.cpp  Factory.cpp  HostAndProcessInfo.cpp  PeriodicTask.cpp  Plugin.cpp  PluginUse.cpp  ProcessInfoPid.cpp  Properties.cpp  SignalWaiter.cpp  SignalWaiterLoop.cpp  TypeStringTools.cpp
src/: CMakeLists.txt
src/rsc/: RSCVersion.cpp.in  RSCVersion.h  RSCVersion.h.in  Version.cpp.in  Version.h.in  config.h.in  rscexports.h.in
src/rsc/config/: CollectingOptionHandler.cpp  CommandLinePropertySource.cpp  CommandLinePropertySource.h  ConfigFileSource.cpp  ConfigFileSource.h  ConfigSource.cpp  ConfigSource.h  Configuration.cpp  Configuration.h  Environment.cpp  Environment.h  OptionHandler.cpp  OptionHandler.h  PropertyHandler.cpp  PropertyHandler.h  TypedValue.cpp  TypedValue.h  Utility.cpp  Utility.h
src/rsc/debug/: DebugTools.cpp  DebugTools.h  LinuxDebugTools.cpp  LinuxDebugTools.h  StackWalker.cpp  StackWalker.h  WindowsDebugTools.cpp  WindowsDebugTools.h
src/rsc/logging/: ConsoleLogger.cpp  ConsoleLogger.h  ConsoleLoggingSystem.cpp  ConsoleLoggingSystem.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h  LoggerProxy.cpp  LoggerProxy.h  LoggerTreeNode.cpp  LoggerTreeNode.h  LoggingSystem.cpp  LoggingSystem.h  OptionBasedConfigurator.cpp  OptionBasedConfigurator.h
src/rsc/math/: ConvergenceMonitor.cpp  ConvergenceMonitor.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  SequenceMonitor.cpp  SequenceMonitor.h  StaticMatrix.cpp  StaticMatrix.h
src/rsc/misc/: IllegalStateException.cpp  IllegalStateException.h  MacSignalWaiter.cpp  PosixSignalWaiter.cpp  Registry.h  SignalWaiter.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  UnsupportedOperationException.cpp  UnsupportedOperationException.h  Win32SignalWaiter.cpp  langutils.cpp  langutils.h  uri.cpp  uri.h
src/rsc/os/: HostInfo.h  LinuxHostInfo.cpp  LinuxProcessInfo.cpp  MacHostInfo.cpp  MacProcessInfo.cpp  PosixHostInfo.cpp  PosixProcessInfo.cpp  PosixUtilities.cpp  ProcessInfo.h  Win32Common.cpp  Win32Common.h  Win32HostInfo.cpp  Win32ProcessInfo.cpp
src/rsc/patterns/: Accessors.h  AssociativeProxy.h  ConstructError.cpp  ConstructError.h  ContainerProxy.h  Factory.h  NoSuchImpl.cpp  NoSuchImpl.h  NoSuchKey.cpp  NoSuchKey.h  ObservableFactory.h  Singleton.h
src/rsc/patterns/detail/: ForceConst.h  PairWorkaround.h
src/rsc/plugins/: Configurator.cpp  Configurator.h  Manager.cpp  Manager.h  Plugin.cpp  Plugin.h  Provider.h
src/rsc/runtime/: ContainerIO.cpp  ContainerIO.h  Demangle.cpp  Demangle.h  InvalidMangledName.cpp  InvalidMangledName.h  NoSuchObject.cpp  NoSuchObject.h  Printable.cpp  Printable.h  Properties.cpp  Properties.h  TypeStringTools.cpp  TypeStringTools.h
src/rsc/subprocess/: Subprocess.cpp  Subprocess.h  UnixSubprocess.cpp  UnixSubprocess.h  WindowsSubprocess.cpp  WindowsSubprocess.h
src/rsc/threading/: Future.cpp  Future.h  InterruptedException.cpp  InterruptedException.h  OrderedQueueDispatcherPool.cpp  OrderedQueueDispatcherPool.h  PeriodicTask.cpp  PeriodicTask.h  RepetitiveTask.cpp  RepetitiveTask.h  SimpleTask.cpp  SimpleTask.h  SynchronizedQueue.cpp  SynchronizedQueue.h  Task.cpp  Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskStateObserver.cpp  TaskStateObserver.h  ThreadedTaskExecutor.cpp  ThreadedTaskExecutor.h
test/: CMakeLists.txt  pkg-config-test.sh  pkg-config-test.sh.in  smoke-mac.conf  smoke-unix.conf  smoke-windows.conf  smoke.conf  syntax-errors-1.conf  syntax-errors-2.conf  syntax-errors-3.conf  testconfig.h.in
test/rsc/: RscTestSuite.cpp
test/rsc/config/: CommandLinePropertySourceTest.cpp  ConfigFileSource.cpp  ConfigFileSourceTest.cpp  Configuration.cpp  ConfigurationTest.cpp  EnvironmentTest.cpp
test/rsc/debug/: DebugToolsTest.cpp
test/rsc/logging/: ConsoleLoggerTest.cpp  LoggerFactoryTest.cpp  LoggerTest.cpp  OptionBasedConfiguratorTest.cpp  logging.config  loggingCaseInsensitive.config  mocks.h
test/rsc/math/: ConvergenceMonitorTest.cpp  MathUtilsTest.cpp  MatrixTest.cpp  SequenceMonitorTest.cpp  StaticMatrixTest.cpp
test/rsc/misc/: RegistreeLib.cpp  RegistreeLib.h  RegistryTest.cpp  UUIDTest.cpp  langutilsTest.cpp  testRegistry.cpp  testRegistry.h  uriTest.cpp
test/rsc/os/: HostInfoTest.cpp  ProcessInfoTest.cpp
test/rsc/patterns/: FactoryTest.cpp  ObservableFactoryTest.cpp  SingletonTest.cpp  mocks.h
test/rsc/plugins/: ConfiguratorTest.cpp  PluginTest.cpp  testplugin.cpp
test/rsc/runtime/: ContainerIOTest.cpp  DemangleTest.cpp  PrintableTest.cpp  PropertiesTest.cpp  TypeStringToolsTest.cpp
test/rsc/subprocess/: UnixSubprocessTest.cpp  WindowsSubprocessTest.cpp  killNotify
test/rsc/threading/: FutureTest.cpp  OrderedQueueDispatcherPoolTest.cpp  SynchronizedQueueTest.cpp  TaskTest.cpp  ThreadedTaskExecutorTest.cpp
(+4 files in other folders)
