FILE(GLOB EXAMPLE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
# handle plugin system separately
LIST(REMOVE_ITEM EXAMPLE_SOURCES Plugin.cpp PluginUse.cpp)

# usual examples
FOREACH(EXAMPLE ${EXAMPLE_SOURCES})
    STRING(REGEX REPLACE "\\.cpp$" "" EXAMPLE_NAME ${EXAMPLE})
    ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE})
    TARGET_LINK_LIBRARIES(${EXAMPLE_NAME} ${RSC_NAME})
ENDFOREACH(EXAMPLE)

ADD_LIBRARY(myplugin SHARED Plugin.cpp)
TARGET_LINK_LIBRARIES(myplugin ${RSC_NAME})
ADD_EXECUTABLE(PluginUse PluginUse.cpp)
TARGET_LINK_LIBRARIES(PluginUse ${RSC_NAME})
